src/objects/Meeting_Participant__c.object
<CustomObject>
    <description>Used to manage the participants at specific APJC meeting</description>
    <fields>
        <fullName>Airline_Designator__c</fullName>
        <formula>Participant_Contact__r.Account.Airline_designator__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Airline Designator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>Participant_Contact__r.Account.IATA_ISO_Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participant Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Participant_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Governance_Meeting__c</fullName>
        <label>Local Group Meeting</label>
        <referenceTo>LocalGovernance_Meeting__c</referenceTo>
        <relationshipLabel>Meeting Attendees</relationshipLabel>
        <relationshipName>Local_Governance_Meeting_Participants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Local_Governance_Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search for the name of the person who participated!</inlineHelpText>
        <label>Local Group Participant</label>
        <referenceTo>Participant__c</referenceTo>
        <relationshipLabel>Meeting Attendees</relationshipLabel>
        <relationshipName>Local_Governance_Meeting_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Local_Group_Type__c</fullName>
        <label>Local Group Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALWG</fullName>
                </value>
                <value>
                    <fullName>APJC</fullName>
                </value>
                <value>
                    <fullName>APJC / FAG</fullName>
                </value>
                <value>
                    <fullName>CAPJC</fullName>
                </value>
                <value>
                    <fullName>CEC</fullName>
                </value>
                <value>
                    <fullName>CGA</fullName>
                </value>
                <value>
                    <fullName>EACP JC</fullName>
                </value>
                <value>
                    <fullName>ICAP</fullName>
                </value>
                <value>
                    <fullName>JALWG</fullName>
                </value>
                <value>
                    <fullName>LCAG-C</fullName>
                </value>
                <value>
                    <fullName>LCAG-P</fullName>
                </value>
                <value>
                    <fullName>LCAG-P / Credit Card WG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Main_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Meeting Attendees</relationshipLabel>
        <relationshipName>Meeting_Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participant_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search on the name of the participant!</inlineHelpText>
        <label>Attendee Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The new participant is not related to an Airline or an Agency or this group does not allow participants from Agencies</errorMessage>
            <filterItems>
                <field>Contact.Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Agency, Airline Headquarters, Airline Branch, General Sales Agent Headquarters, Others</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Meeting Attendees</relationshipLabel>
        <relationshipName>Local_Governance_Meeting_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Participant_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Participant_Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>Meeting Attendee</label>
    <nameField>
        <displayFormat>Mtg Attendee-{0000}</displayFormat>
        <label>Meeting Attendee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Contact_should_have_value_in_main_fields</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
ISBLANK(Participant_Contact__r.FirstName),
ISBLANK(Participant_Contact__r.LastName),
ISBLANK(Participant_Contact__r.Title),
ISBLANK(Participant_Contact__r.Email),
ISBLANK(Participant_Contact__r.AccountId),
ISBLANK(Participant_Contact__r.Account.IATA_ISO_Country__c)
)</errorConditionFormula>
        <errorMessage>The contact chosen must have a value for the following fields:
First Name, Last Name, Job Title, Email and Account Name. Please complete these information and try again.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Local_Groups_Meeting_Attendees</fullName>
        <active>true</active>
        <description>This validation rule reflects the rules established by resolution to allow only specific entities to attend meetings of specific local group types.</description>
        <errorConditionFormula>AND(
	AND(
		NOT(
			AND(
				OR(Participant_Contact__r.Account.RecordType.DeveloperName = &quot;IATA_Airline&quot;, 
					Participant_Contact__r.Account.RecordType.DeveloperName = &quot;IATA_Airline_BR&quot;
				),
				OR(ISPICKVAL(Local_Group_Type__c, &quot;APJC&quot;),
					ISPICKVAL(Local_Group_Type__c, &quot;APJC / FAG&quot;),
					ISPICKVAL(Local_Group_Type__c, &quot;LCAG-P&quot;),
					ISPICKVAL(Local_Group_Type__c, &quot;LCAG-P / Credit Card WG&quot;),
					ISPICKVAL(Local_Group_Type__c, &quot;ICAP&quot;),
					ISPICKVAL(Local_Group_Type__c, &quot;LCAG-C&quot;),
					ISPICKVAL(Local_Group_Type__c, &quot;CCC&quot;),
					ISPICKVAL(Local_Group_Type__c, &quot;CEC&quot;),
					ISPICKVAL(Local_Group_Type__c, &quot;CGA&quot;),
					ISPICKVAL(Local_Group_Type__c, &quot;CAPJC&quot;)
				)
			)
		),
		NOT(
			AND(
				OR(
					AND(
						ISPICKVAL(Participant_Contact__r.Account.Sector__c,&quot;Association&quot;),
						OR(Participant_Contact__r.Account.RecordType.DeveloperName = &quot;Standard_Account&quot;, 
							Participant_Contact__r.Account.RecordType.DeveloperName = &quot;Others&quot;
						)
					),
					Participant_Contact__r.Account.RecordType.DeveloperName = &quot;IATA_Agency&quot;
				),
				OR(ISPICKVAL(Local_Group_Type__c, &quot;APJC&quot;),
					ISPICKVAL(Local_Group_Type__c, &quot;APJC / FAG&quot;),
					ISPICKVAL(Local_Group_Type__c, &quot;CCC&quot;),
					ISPICKVAL(Local_Group_Type__c, &quot;CEC&quot;),
					ISPICKVAL(Local_Group_Type__c, &quot;CGA&quot;),
					ISPICKVAL(Local_Group_Type__c, &quot;CAPJC&quot;)
				)
			)
		),
		NOT(
			AND(
				Participant_Contact__r.Account.RecordType.DeveloperName = &quot;IATA_GSA&quot;,
				OR(ISPICKVAL(Local_Group_Type__c, &quot;LCAG-C&quot;),
					ISPICKVAL(Local_Group_Type__c, &quot;CAPJC&quot;)
				)
			)
		),
		Local_Governance_Meeting__r.Local_Governance__r.RecordType.DeveloperName = &quot;Local_Groups&quot;
	),
	true
)</errorConditionFormula>
        <errorMessage>The meeting attendee that you are trying to add is not allowed by Resolution.</errorMessage>
    </validationRules>
</CustomObject>